// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should HW2CounterList 1`] = `
<div>
  <div>
    <h1>
      HW2CounterList
    </h1>
    <button>
      click me
    </button>
    <ul />
  </div>
</div>
`;

exports[`should add 1 item 1`] = `
<div>
  <div>
    <h1>
      HW2CounterList
    </h1>
    <button>
      click me
    </button>
    <ul>
      <li>
        1
      </li>
    </ul>
  </div>
</div>
`;

exports[`should add 3 item 1`] = `
<div>
  <div>
    <h1>
      HW2CounterList
    </h1>
    <button>
      click me
    </button>
    <ul>
      <li>
        3
      </li>
      <li>
        2
      </li>
      <li>
        1
      </li>
    </ul>
  </div>
</div>
`;

exports[`should add 5 item 1`] = `
<div>
  <div>
    <h1>
      HW2CounterList
    </h1>
    <button>
      click me
    </button>
    <ul>
      <li>
        5
      </li>
      <li>
        4
      </li>
      <li>
        3
      </li>
      <li>
        2
      </li>
      <li>
        1
      </li>
    </ul>
  </div>
</div>
`;
